--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                     </div>
                     <div class="pdf-card" style="animation-delay: 0.4s; animation-name: fadeInUp; border-left-color: var(--primary-color);">
                         <h3>امتحان علمي ومهني شامل مقترح 2007</h3>
-                        <a href="https://drive.google.com/uc?export=download&amp;id=1_fpOHL_LPL4hzRODZhHC6KVD5wCRYAgX" class="pdf-link" target="_blank">
+                        <a href="https://drive.google.com/file/d/1aKTnhJBgev5l_8n3otzpFy8UANGvF3bh/view?usp=drivesdk" class="pdf-link" target="_blank">
                             <i class="fas fa-download"></i> تحميل الملف
                         </a>
                     </div>
