--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
                         <div class="topic">أثر البيئة + الوراثة فوق جينية + مقدمة الطفرات</div>
                         <div class="time"><i class="fas fa-clock"></i> 5:00 مساءً - 7:00 مساءً</div>
                         <div class="session-footer">
-                            <a href="https://www.youtube.com/watch?v=bNyUyrR0PHo" class="video-link disabled" target="_blank">
+                            <a href="https://www.youtube.com/live/XGL0UdCbX58" class="video-link disabled" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
