--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                         <div class="topic">الطفرات + التكنولوجيا</div>
                         <div class="time"><i class="fas fa-clock"></i> 8:00 مساءً - 12:00 منتصف الليل</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/الطفرات_والتكنولوجيا" class="video-link disabled" target="_blank">
+                            <a href="https://www.youtube.com/live/YXDHI2Zj0qY" class="video-link disabled" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
