--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                         <div class="topic">التكنلوجيا + التنفس الخلوي والتخمر</div>
                         <div class="time"><i class="fas fa-clock"></i> 9:00 صباحاً - 12:00 ظهراً</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/التنفس_الخلوي" class="video-link disabled" target="_blank">
+                            <a href="https://www.youtube.com/live/bU7q6foV7sk?si=HdbBao4RvYSO4KeY" class="video-link disabled" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
