--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@
                         <div class="topic">تصنيع البروتين وتضاعف DNA </div>
                         <div class="time"><i class="fas fa-clock"></i> 9:00 صباحاً - 11:00 صباحاً</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/الجينات_المرتبطة" class="video-link disabled" target="_blank">
+                            <a href="https://www.youtube.com/live/CXD1UIMytDs?si=CW3BayccNXBD3N3M" class="video-link disabled" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
