--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                         <div class="topic">الوراثة المندلية + الوراثة ما بعد مندل</div>
                         <div class="time"><i class="fas fa-clock"></i> 5:00 مساءً - 10:00 مساءً</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/الوراثة_المندلية" class="video-link disabled" target="_blank">
+                            <a href="https://www.youtube.com/live/7r2kq6rN8Po?si=JAhqpRmLTs_qY6tj" class="video-link disabled" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
