--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
                         <div class="topic">دورة الخلية والانقسام</div>
                         <div class="time"><i class="fas fa-clock"></i> 7:30 مساءً - 10:30 مساءً</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/دورة_الخلية_والانقسام" class="video-link" target="_blank">
+                            <a href="https://www.youtube.com/watch?v=6wwmb8A5gbs" class="video-link" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box">
