--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                         <div class="topic">البيئة مراجعه سريعه</div>
                         <div class="time"><i class="fas fa-clock"></i> 6:00 صباحاً</div>
                         <div class="session-footer">
-                            <a href="https://youtube.com/live/البيئة_مراجعه_سريعه" class="video-link" target="_blank">
+                            <a href="https://www.youtube.com/watch?v=rLzYWWF8TcM" class="video-link" target="_blank">
                                 <i class="fas fa-play"></i> مشاهدة البث
                             </a>
                             <span class="timer-box timer-waiting">
